# 3rd-Party-DiscordSystem

./: Cargo.toml  README.md
bindgen-citro2d/: Cargo.toml
bindgen-citro2d/src/: main.rs
citro2d-sys-3pds/: Cargo.toml  README.md
citro2d-sys-3pds/src/: base.rs  bindings.rs  lib.rs  sprite.rs
third_party_discord_system/: Cargo.toml  TODO.md
third_party_discord_system/src/: main.rs
third_party_discord_system/src/romfs/Roboto/: README.md  Roboto-BoldItalic.bcfnt  Roboto-Italic.bcfnt
