[package]
name = "third_party_discord_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs.git", version = "0.7.1" }
cfg-if = "1.0.0"
serde_json = "1.0.96"
url = "2.3.1"
anyhow = "1.0.71"


[package.metadata.cargo-3ds]
romfs_dir = "src/romfs"
